infra/k8s/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mongo-from-services
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - auth-mongo
          - tickets-mongo
          - orders-mongo
          - payments-mongo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - auth
                  - tickets
                  - orders
                  - payments
                  - expiration
      ports:
        - protocol: TCP
          port: 27017
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-redis-from-expiration
spec:
  podSelector:
    matchLabels:
      app: expiration-redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: expiration
      ports:
        - protocol: TCP
          port: 6379
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nats-from-services
spec:
  podSelector:
    matchLabels:
      app: nats
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - auth
                  - tickets
                  - orders
                  - payments
                  - expiration
      ports:
        - protocol: TCP
          port: 4222
